# RustyShell

./: .gitignore  .replit  Cargo.toml  README.md  replit.nix
README/: README.md
README/more-md/: command.md  config.md
readme/: README.md
src/: main.rs
src/terminal/: c.rs  mod.rs
userfiles/exec_test/: err.rs  var.rs
userfiles/random/: var.rs
