[package]
name = "rustyshell"
version = "0.1.0"
authors = ["SCP-049"]
edition = "2021"
description = "A terminal written in rust! Made as a fun project to learn more about the language"
readme = "README.md"
license = "BSL-1.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
colored = "2.0.0"
clearscreen = "2.0.0"
inquire = { version = "0.5.3", features = ["date", "editor"] }